new user operations added
